代码优化，聚合函数添加窗口聚合类型，但是目前不处理，窗口语义一般在派生指标中实现